2014-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	Ediff's overlay priorities cause more trouble than they solve.
	* vc/ediff-init.el (ediff-shadow-overlay-priority): Remove variable.
	(ediff-highest-priority): Remove function (bug#17234).
	* vc/ediff-util.el (ediff-highlight-diff-in-one-buffer):
	* vc/ediff-diff.el (ediff-set-diff-overlays-in-one-buffer)
	(ediff-set-fine-diff-properties-in-one-buffer): Don't mess with
	overlay priorities.

2014-04-10  Feng Li  <fengli@gmail.com>  (tiny change)

	* progmodes/pascal.el (pascal-font-lock-keywords): Fix incorrect format
	entry; use symbol boundaries to avoid mis-matches.

2014-04-10  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-file-name-handler)
	(tramp-completion-file-name-handler): Avoid recursive loading.

	* net/tramp-sh.el (tramp-make-copy-program-file-name):
	Quote result also locally.

2014-04-09  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Highlight more
	Module methods.  (Bug#17216)

2014-04-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help.el (describe-bindings): Fix buffer handling (bug#17210).
	(describe-bindings-internal): Mark obsolete.

2014-04-07  João Távora  <joaotavora@gmail.com>

	* elec-pair.el:
	(electric-pair--syntax-ppss): When inside comments parse from
	comment beginning.
	(electric-pair--balance-info): Fix typo in comment.
	(electric-pair--in-unterminated-string-p): Delete.
	(electric-pair--unbalanced-strings-p): New function.
	(electric-pair-string-bound-function): New var.
	(electric-pair-inhibit-if-helps-balance): Decide quote pairing
	according to `electric-pair--in-unterminated-string-p'

2014-04-07  João Távora  <joaotavora@gmail.com>

	* elec-pair.el (electric-pair-inhibit-if-helps-balance):
	Inhibit quote pairing if point-max is inside an unterminated string.
	(electric-pair--looking-at-unterminated-string-p): Delete.
	(electric-pair--in-unterminated-string-p): New function.
